Thu May 10 18:19:09 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ACE-INSTALL.html:
          Add documentation for the mingw support, thanks Cristian Ferretti
          <cristian_ferretti@yahoo.com> for providing this info.

Thu May 10 16:55:20 2001  Carlos O'Ryan  <coryan@uci.edu>

        * bin/auto_run_tests.lst:
          Add the new Latency and Throughput tests to the nightly
          regression testsuite.

Thu May 10 18:37:41 2001  Steve Huston  <shuston@riverace.com>

        * ace/POSIX_Asynch_IO.cpp (ACE_POSIX_Asynch_Result ctor): Added
          initializers for bytes_transferred_ and error_. Thanks to
          Itzhak Briskman <ibriskman@ndsisrael.com> for this fix.

        * THANKS: Added Itzhak Briskman to the Hall of Fame.
          Updated David Brock's email address.

        * ace/SString.cpp (ACE_CString::substring): If requesting a substring
          longer than the string is, return only what's left. Thanks to
          David Brock <dbrock@momsdesk.com> for reporting this.

        * tests/SString_Test.cpp: Add a substring extraction test to catch
          the above problem (returning a substring with more than is left
          in the original string).

        * ace/Process_Mutex.{h cpp inl}: Changed the "uses mutex" vs
          "uses SV_Semaphore_Complex" decision to make use of a private
          macro defined in Process_Mutex.h. Further, the platforms that
          use mutexes are now Win32, PSOS, Pthreads, Sthreads.

        * ace/config-sunos5.6.h:
        * ace/config-hpux-11.00.h: Added ACE_HAS_SHM_OPEN since these
          platforms support shm_open, and ACE_Mutex wants to use it for
          cross-process mutexes.

        * ace/Proactor.h: Updated handle_events comments to note that the
          ACE_Time_Value is relative and is updated before return.

        * ace/Synch.(h cpp) (ACE_Mutex): Added ACE_HAS_PTHREADS and
          ACE_HAS_STHREADS to the platforms which handle inter-process mutex