@@ -7,7 +7,7 @@
 //
 // = DESCRIPTION
 //    This simple test illustrates how to use advanced features of
-//    <ACE_ARGV>. 
+//    <ACE_ARGV>.
 //
 // = AUTHOR
 //    Suresh Kannan <kannan@uav.ae.gatech.edu>
@@ -19,8 +19,8 @@
 
 ACE_RCSID(tests, ARGV_Test, "$Id$")
 
-int 
-main (int, char *argv[])
+int
+main (int, ACE_TCHAR *argv[])
 {
   ACE_START_TEST (ACE_TEXT ("ARGV_Test"));
 
@@ -28,10 +28,10 @@ main (int, char *argv[])
   ACE_ARGV cl (argv);
 
   // My own stuff.
-  ACE_ARGV my;		
+  ACE_ARGV my;
 
   // Add to my stuff.
-  my.add ("-ORBEndpoint iiop://localhost:12345");
+  my.add (ACE_TEXT ("-ORBEndpoint iiop://localhost:12345"));
 
   // Combine the two (see the ace/ARGV.h constructors documentation).
   ACE_ARGV a (cl.argv (),
@@ -39,7 +39,7 @@ main (int, char *argv[])
 
   ACE_DEBUG ((LM_DEBUG,
               ACE_TEXT ("argc = %d\n"),
-              ACE_TEXT (a.argc ())));
+              a.argc ())));
 
   // Print the contents of the combined <ACE_ARGV>.
   for (size_t i = 0; i < a.argc (); i++)
